# frizir

./: .gdbinit  Cargo.toml  README.md  config.toml  flake.nix  memory.x
.cargo/: config.toml
src/: main.rs
